# llbt

./: .gitignore  CMakeLists.txt  NOTICE  README.md  THIRD-PARTY-NOTICES
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  README.md  bench.cpp  bench_compare.cpp  bench_concurrency.cpp  bench_group_commit.cpp  bench_sqlite_crud.cpp
examples/: 01_files_and_mmap.cpp  02_crash_safe_kv.cpp  03_concurrent_readers.cpp  04_bring_your_own.cpp  05_iterate_and_query.cpp  06_in_memory.cpp  07_c_api.c  CMakeLists.txt
include/llbt/: api.hpp  c_api.h  commit_metrics.hpp  core.hpp
packaging/conan/: conanfile.py
packaging/vcpkg/llbt/: portfile.cmake  vcpkg.json
src/: llbt.hpp
src/llbt/: aggregate_ops.hpp  alloc.cpp  alloc.hpp  alloc_slab.cpp  alloc_slab.hpp  array.cpp  array.hpp  array_basic.hpp  array_basic_tpl.hpp  array_binary.cpp  array_binary.hpp  array_blob.cpp  array_blob.hpp  array_blobs_big.cpp  array_blobs_big.hpp  array_blobs_small.cpp  array_blobs_small.hpp  array_decimal128.cpp  array_decimal128.hpp  array_direct.hpp  array_fixed_bytes.cpp  array_fixed_bytes.hpp  array_integer.cpp  array_integer.hpp  array_integer_tpl.hpp  array_packed_blobs.cpp  array_packed_blobs.hpp  array_ref.hpp  array_string.cpp  array_string.hpp  array_string_short.cpp  array_string_short.hpp  array_timestamp.cpp  array_timestamp.hpp  array_unsigned.cpp  array_unsigned.hpp  array_with_find.cpp  array_with_find.hpp  backup_restore.cpp  backup_restore.hpp  (+65 more)
src/llbt/core/: commit_journal.cpp  commit_journal.hpp  commit_journal_format.hpp  commit_metrics.cpp  commit_recovery.cpp  commit_recovery.hpp  crc32c.cpp  crc32c.hpp  roots_replication.cpp  roots_replication.hpp  store.cpp
src/llbt/impl/: array_writer.hpp  changeset_input_stream.hpp  cont_transact_hist.hpp  destroy_guard.hpp  output_stream.cpp  output_stream.hpp  simulated_failure.cpp  simulated_failure.hpp  transact_log.cpp  transact_log.hpp
src/llbt/util/: aes_cryptor.hpp  assert.hpp  backtrace.cpp  backtrace.hpp  base64.cpp  base64.hpp  basic_system_errors.cpp  basic_system_errors.hpp  bind_ptr.hpp  buffer.hpp  cf_ptr.hpp  checked_mutex.hpp  config.h.in  demangle.cpp  demangle.hpp  encrypted_file_mapping.cpp  encrypted_file_mapping.hpp  errno.hpp  features.h  fifo_helper.cpp  fifo_helper.hpp  file.cpp  file.hpp  file_mapper.cpp  file_mapper.hpp  flat_map.hpp  function_ref.hpp  functional.hpp  input_stream.hpp  interprocess_condvar.cpp  interprocess_condvar.hpp  interprocess_mutex.cpp  interprocess_mutex.hpp  logger.cpp  logger.hpp  memory_stream.cpp  memory_stream.hpp  optional.hpp  overload.hpp  platform_info.cpp  (+21 more)
test/: CMakeLists.txt  main.cpp  test.hpp  test_all.cpp  test_all.hpp  test_alloc.cpp  test_array.cpp  test_array_blob.cpp  test_array_blobs_big.cpp  test_array_blobs_small.cpp  test_array_float.cpp  test_array_integer.cpp  test_array_packed_blobs.cpp  test_array_string_short.cpp  test_binary_data.cpp  test_bplus_tree.cpp  test_c_api.cpp  test_commit_journal.cpp  test_core_store.cpp  test_decimal128.cpp  test_destroy_guard.cpp  test_encrypted_file_mapping.cpp  test_file.cpp  test_file_locks.cpp  test_impl_simulated_failure.cpp  test_safe_int_ops.cpp  test_self.cpp  test_status.cpp  test_string_data.cpp  test_string_types.hpp  test_thread.cpp  test_utf8.cpp  test_uuid.cpp  testsettings.hpp
test/util/: check_logic_error.hpp  check_system_error.hpp  crypt_key.cpp  crypt_key.hpp  demangle.cpp  demangle.hpp  misc.cpp  misc.hpp  random.cpp  random.hpp  resource_limits.cpp  resource_limits.hpp  spawned_process.cpp  spawned_process.hpp  super_int.hpp  test_only.cpp  test_only.hpp  test_path.cpp  test_path.hpp  test_types.hpp  thread_wrapper.hpp  timer.cpp  timer.hpp  unit_test.cpp  unit_test.hpp  wildcard.cpp  wildcard.hpp
